some css changes in view2 to fix alignments

--- a/app/view2/view2.css
+++ b/app/view2/view2.css
@@ -1,3 +1,7 @@
+form {
+  margin-bottom: 40px;
+}
+
 .panel-title {
   font-weight: bold;
 }
@@ -11,7 +15,8 @@
 }
 
 .btn-submit {
-  margin-bottom: 40px;
+  padding: 10px;
+  float: right;
 }
 
 #teams-list {
@@ -19,19 +24,25 @@
   margin-top: 30px;
   padding-left: 15px;
 }
+
 #teams-list h4{
 	float: left;
 }
+
 #team-select{
     float: left;
     width: 30%;
     margin-left: 20px;
 }
 
-#grader-name{
+#grader-name-label {
+  width: 29%;
+}
+
+#grader-name-input {
     float: left;
-    width: 50%;
-    margin-left: 20px;
+    width: 70%;
+    margin-left: 1%;
 }
 
 #slide-text{
@@ -43,15 +54,10 @@
   display: inline;
 }
 
-
 .name {
   font-weight: bold;
 }
 .product {
   text-indent: 10px;
   font-style: italic;
-}
-
-.form_submit{
-	float: right;
 }
